VerifyOrigin, Loading State, Reset, VSCode task to start CLI
+ Added "verifyOrigin" under "netutils.js" for Backend to verify that incoming web requests originate from a valid IP/domain
+ Added loading state for all event + animation triggers to give better user feedback
+ Added "reset" option to reset all twitch event counts to 0
+ Added "Cheer" trigger + display in the Dashboard
+ Added task to start cli automatically with backend + frontend

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,6 +28,10 @@
     {
       "label": "start",
       "dependsOn": ["start backend", "start frontend"]
+    },
+    {
+      "label": "start debug",
+      "dependsOn": ["start backend", "start frontend", "start cli"]
     }
   ]
 }
